[gd_scene load_steps=6 format=3 uid="uid://b1ksfv0lrb2e7"]

[ext_resource type="Script" path="res://Objects/UI/Title/DeleteConfirm.gd" id="1_1t1tu"]
[ext_resource type="Texture2D" uid="uid://byq6jymnhrxlp" path="res://Graphics/UI/Theme/PanelBack.png" id="1_lkxe2"]
[ext_resource type="FontFile" uid="uid://cg0kedwr3m5a6" path="res://Fonts/DialogueFontBold.tres" id="2_doaql"]
[ext_resource type="PackedScene" uid="uid://cfak7sg6dybpi" path="res://Objects/UI/Elements/SelectableButton.tscn" id="3_6lw01"]

[sub_resource type="LabelSettings" id="LabelSettings_0u1ve"]
font = ExtResource("2_doaql")
font_color = Color(1, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="DeleteConfirm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1t1tu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.286275)

[node name="Back" type="NinePatchRect" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lkxe2")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Margin" type="MarginContainer" parent="Back"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBox" type="VBoxContainer" parent="Back/Margin"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Back/Margin/VBox"]
layout_mode = 2
text = "Really delete it?"
label_settings = SubResource("LabelSettings_0u1ve")
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Back/Margin/VBox"]
layout_mode = 2

[node name="NoDelete" parent="Back/Margin/VBox/Buttons" instance=ExtResource("3_6lw01")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../YesDelete")
focus_neighbor_top = NodePath("../YesDelete")
focus_neighbor_right = NodePath("../YesDelete")
focus_neighbor_bottom = NodePath("../YesDelete")
focus_next = NodePath("../YesDelete")
focus_previous = NodePath("../YesDelete")
text = "No!"

[node name="YesDelete" parent="Back/Margin/VBox/Buttons" instance=ExtResource("3_6lw01")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../NoDelete")
focus_neighbor_top = NodePath("../NoDelete")
focus_neighbor_right = NodePath("../NoDelete")
focus_neighbor_bottom = NodePath("../NoDelete")
focus_next = NodePath("../NoDelete")
focus_previous = NodePath("../NoDelete")
text = "Yes!"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Back/Margin/VBox/Buttons/NoDelete" to="." method="_on_no_delete_pressed"]
[connection signal="pressed" from="Back/Margin/VBox/Buttons/YesDelete" to="." method="_on_yes_delete_pressed"]
